--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "id": "level-builder-ai",
   "name": "Level Builder AI",
-  "version": "1.0.0",
-  "description": "Automatic level generator for Geometry Dash with decorations and passability check.",
+  "version": "1.1.0",
+  "description": "Automatic Geometry Dash level generator with decorations, passability check, and UI-controlled difficulty.",
   "author": "Snovka999",
   "license": "MIT",
   "entry": "main.lua"
